--- a/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
+++ b/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
@@ -47,12 +47,32 @@
       <customTask
              category="Imixs-Workflow"
              description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
-             featureContainer="org.imixs.bpmn.ImixsFeatureContainerEvent"
-             id="org.imixs.workflow.bpmn.ActivityEntityEvent"
-             name="Workflow Event"
+             featureContainer="org.imixs.bpmn.ImixsFeatureContainerCatchEvent"
+             id="org.imixs.workflow.bpmn.ActivityEntityCatchEvent"
+             name="Workflow Catch Event"
              propertyTabs="org.imixs.bpmn.propertytab.event.history org.imixs.bpmn.propertytab.event.acl org.imixs.bpmn.propertytab.event.mail org.imixs.bpmn.propertytab.event.workflow org.imixs.bpmn.propertytab.event.businessrule org.imixs.bpmn.propertytab.event.report org.imixs.bpmn.propertytab.event.version org.imixs.bpmn.propertytab.event.timer"
              runtimeId="org.imixs.workflow.bpmn.runtime"
              type="IntermediateCatchEvent">
+          <property
+           		description="Workflow Activity ID"
+                label="ID"
+                name="activityid"
+                type="EInt"
+                value="0">
+          </property>            
+      </customTask>
+      
+      
+      
+        <customTask
+             category="Imixs-Workflow"
+             description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
+             featureContainer="org.imixs.bpmn.ImixsFeatureContainerThrowEvent"
+             id="org.imixs.workflow.bpmn.ActivityEntityThrowEvent"
+             name="Workflow Throw Event"
+             propertyTabs="org.imixs.bpmn.propertytab.event.history org.imixs.bpmn.propertytab.event.acl org.imixs.bpmn.propertytab.event.mail org.imixs.bpmn.propertytab.event.workflow org.imixs.bpmn.propertytab.event.businessrule org.imixs.bpmn.propertytab.event.report org.imixs.bpmn.propertytab.event.version org.imixs.bpmn.propertytab.event.timer"
+             runtimeId="org.imixs.workflow.bpmn.runtime"
+             type="IntermediateThrowEvent">
           <property
            		description="Workflow Activity ID"
                 label="ID"
@@ -73,7 +93,7 @@
             replaceTab="org.eclipse.bpmn2.modeler.commonEvent.tab"
             label="Workflow"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
       <propertyTab
@@ -82,7 +102,7 @@
        		afterTab="org.imixs.bpmn.propertytab.event.workflow"
             label="ACL"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
       <propertyTab
@@ -91,7 +111,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.acl"
             label="History"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
       <propertyTab
@@ -100,7 +120,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.history"
             label="Mail"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
          
       <propertyTab
@@ -109,7 +129,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.mail"
             label="Rule"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
       <propertyTab
@@ -118,7 +138,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.businessrule"
             label="Report"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
       <propertyTab
@@ -127,7 +147,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.report"
             label="Version"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
       
        <propertyTab
@@ -136,7 +156,7 @@
             afterTab="org.imixs.bpmn.propertytab.event.version"
             label="Timer"
             runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent">
+            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
       </propertyTab>
 
       
