--- a/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
+++ b/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
@@ -19,9 +19,6 @@
             runtimeId="org.imixs.workflow.bpmn.runtime"
             uri="http://www.imixs.org/bpmn2">
       </model>
-      <!-- oder CustomElementFeatureContainer  MyTaskFeatureContainer 
-       org.imixs.bpmn.propertytab.application org.imixs.bpmn.propertytab.mail
-      -->
       
     
       <customTask
@@ -31,7 +28,7 @@
             icon="process-bubble.png"
             id="org.imixs.workflow.bpmn.ProcessEntityTask"
             name="Workflow Task"
-            propertyTabs="org.imixs.bpmn.propertytab.task.workflow org.imixs.bpmn.propertytab.task.application"
+            propertyTabs="org.imixs.bpmn.propertytab.task.workflow"
             runtimeId="org.imixs.workflow.bpmn.runtime"
             type="Task">
          <property
@@ -43,122 +40,7 @@
          </property>
       </customTask>
      
-     <!--
-      <customTask
-             category="Imixs-Workflow"
-             description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
-             featureContainer="org.imixs.bpmn.ImixsFeatureContainerCatchEvent"
-             id="org.imixs.workflow.bpmn.ActivityEntityCatchEvent"
-             name="Workflow Catch Event"
-             propertyTabs="org.imixs.bpmn.propertytab.event.history org.imixs.bpmn.propertytab.event.acl org.imixs.bpmn.propertytab.event.mail org.imixs.bpmn.propertytab.event.workflow org.imixs.bpmn.propertytab.event.businessrule org.imixs.bpmn.propertytab.event.report org.imixs.bpmn.propertytab.event.version org.imixs.bpmn.propertytab.event.timer"
-             runtimeId="org.imixs.workflow.bpmn.runtime"
-             type="IntermediateCatchEvent">
-          <property
-           		description="Workflow Activity ID"
-                label="ID"
-                name="activityid"
-                type="EInt"
-                value="0">
-          </property>            
-      </customTask>
-      
-      
-      
-        <customTask
-             category="Imixs-Workflow"
-             description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
-             featureContainer="org.imixs.bpmn.ImixsFeatureContainerThrowEvent"
-             id="org.imixs.workflow.bpmn.ActivityEntityThrowEvent"
-             name="Workflow Throw Event"
-             propertyTabs="org.imixs.bpmn.propertytab.event.history org.imixs.bpmn.propertytab.event.acl org.imixs.bpmn.propertytab.event.mail org.imixs.bpmn.propertytab.event.workflow org.imixs.bpmn.propertytab.event.businessrule org.imixs.bpmn.propertytab.event.report org.imixs.bpmn.propertytab.event.version org.imixs.bpmn.propertytab.event.timer"
-             runtimeId="org.imixs.workflow.bpmn.runtime"
-             type="IntermediateThrowEvent">
-          <property
-           		description="Workflow Activity ID"
-                label="ID"
-                name="activityid"
-                type="EInt"
-                value="0">
-          </property>            
-      </customTask>
-        
-      -->
-      
-      <!-- Activity Tabs 
-             
-      -->
-	  <propertyTab
-            class="org.imixs.bpmn.ui.event.WorkflowPropertySection"
-            id="org.imixs.bpmn.propertytab.event.workflow"
-            replaceTab="org.eclipse.bpmn2.modeler.commonEvent.tab"
-            label="Workflow"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.ACLPropertySection"
-            id="org.imixs.bpmn.propertytab.event.acl"
-       		afterTab="org.imixs.bpmn.propertytab.event.workflow"
-            label="ACL"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.HistoryPropertySection"
-            id="org.imixs.bpmn.propertytab.event.history"
-            afterTab="org.imixs.bpmn.propertytab.event.acl"
-            label="History"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.MailPropertySection"
-            id="org.imixs.bpmn.propertytab.event.mail"
-            afterTab="org.imixs.bpmn.propertytab.event.history"
-            label="Mail"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-         
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.BusinessRulePropertySection"
-            id="org.imixs.bpmn.propertytab.event.businessrule"
-            afterTab="org.imixs.bpmn.propertytab.event.mail"
-            label="Rule"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.ReportPropertySection"
-            id="org.imixs.bpmn.propertytab.event.report"
-            afterTab="org.imixs.bpmn.propertytab.event.businessrule"
-            label="Report"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-      <propertyTab
-            class="org.imixs.bpmn.ui.event.VersionPropertySection"
-            id="org.imixs.bpmn.propertytab.event.version"
-            afterTab="org.imixs.bpmn.propertytab.event.report"
-            label="Version"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-      
-       <propertyTab
-            class="org.imixs.bpmn.ui.event.TimerPropertySection"
-            id="org.imixs.bpmn.propertytab.event.timer"
-            afterTab="org.imixs.bpmn.propertytab.event.version"
-            label="Timer"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.CatchEvent org.eclipse.bpmn2.ThrowEvent">
-      </propertyTab>
-
+ 
       
       <!-- Process Tabs -->
       <propertyTab
@@ -170,31 +52,7 @@
          type="org.eclipse.bpmn2.Task">
       </propertyTab>
       
-      <propertyTab
-            afterTab="org.imixs.bpmn.propertytab.task.workflow"
-            class="org.imixs.bpmn.ui.task.ProcessApplicationPropertySection"
-            id="org.imixs.bpmn.propertytab.task.application"
-            label="Application"
-            replaceTab="org.eclipse.bpmn2.modeler.activity.io.tab"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.Task">
-      </propertyTab>
-       
-	 
-       
-       
-       
-       
-       <!-- WorkflowGroup Tab -->
-       <propertyTab
-            class="org.imixs.bpmn.ui.process.ProfilePropertySection"
-            id="org.imixs.bpmn.propertytab.process.workflow"
-            label="Workflow"
-            runtimeId="org.imixs.workflow.bpmn.runtime"
-            type="org.eclipse.bpmn2.Definitions org.eclipse.bpmn2.Process org.eclipse.bpmn2.Collaboration">
-      </propertyTab>
-    
-    
+     
 
       
    </extension>
