--- a/org.imixs.eclipse.bpmn2.feature/pom.xml
+++ b/org.imixs.eclipse.bpmn2.feature/pom.xml
@@ -16,12 +16,12 @@
 
 	<parent>
 		<groupId>org.imixs.eclipse</groupId>
-		<artifactId>org.imixs.eclipse.parent</artifactId>
+		<artifactId>org.imixs.eclipse.bpmn2</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.imixs.eclipse.bpmn2.features</groupId>
+	<groupId>org.imixs.eclipse</groupId>
 	<artifactId>org.imixs.eclipse.bpmn2.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 	<name>Imixs BPMN Modeler Features: Main</name>
