--- a/org.imixs.eclipse.bpmn2.plugin/pom.xml
+++ b/org.imixs.eclipse.bpmn2.plugin/pom.xml
@@ -6,13 +6,12 @@
 
 	<parent>
 		<groupId>org.imixs.eclipse</groupId>
-		<artifactId>org.imixs.eclipse.parent</artifactId>
+		<artifactId>org.imixs.eclipse.bpmn2</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.imixs.eclipse.bpmn2.plugins</groupId>
-	<artifactId>org.imixs.eclipse.bpmn2</artifactId>
+	<groupId>org.imixs.eclipse</groupId>
+	<artifactId>org.imixs.eclipse.bpmn2.plugin</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	<name>Imixs BPMN Modeler Plugins: Main</name>
 	<description>Main plugin for Imixs BPMN Modeler</description>
