--- a/org.imixs.eclipse.bpmn2.plugin/pom.xml
+++ b/org.imixs.eclipse.bpmn2.plugin/pom.xml
@@ -10,11 +10,10 @@
 		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.imixs.eclipse</groupId>
 	<artifactId>org.imixs.eclipse.bpmn2.plugin</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<name>Imixs BPMN Modeler Plugins: Main</name>
-	<description>Main plugin for Imixs BPMN Modeler</description>
+	<name>Imixs-BPMN Modeler: Plugin</name>
+	<description>Main plugin for Imixs-BPMN Modeler</description>
 <!-- 
 	<build>
 		<plugins>
