--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>org.imixs.eclipse.bpmn2</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Imixs-Workflow BPMN2</name>
+	<name>Imixs-BPMN Modeler</name>
 
 	<description>
 		Imixs-BPMN is a free modelling tool which takes the full advantage of all the capabilities of the 
