--- a/org.imixs.eclipse.bpmn2.feature/pom.xml
+++ b/org.imixs.eclipse.bpmn2.feature/pom.xml
@@ -1,12 +1,12 @@
 <!--
-  Copyright (c) 2011, 2012, 2013, 2014 Red Hat, Inc.
+  Copyright (c) 2011, 2012, 2013, 2014 Imixs Softwae Solutions GmbH
   All rights reserved.
   This program is made available under the terms of the
-  Eclipse Public License v1.0 which accompanies this distribution,
-  and is available at http://www.eclipse.org/legal/epl-v10.html
+  General Public License v2.0 which accompanies this distribution,
+  and is available at http://www.gnu.org/licenses/gpl.txt
   
   Contributors:
-  	Red Hat, Inc. - initial API and implementation
+  	ralph.soika@imixs.com - initial API and implementation
 -->
 <project
 	xmlns="http://maven.apache.org/POM/4.0.0"
