--- a/org.imixs.eclipse.bpmn2.site/pom.xml
+++ b/org.imixs.eclipse.bpmn2.site/pom.xml
@@ -1,12 +1,12 @@
 <!--
-  Copyright (c) 2011, 2012, 2013, 2014 Red Hat, Inc.
+  Copyright (c) 2011, 2012, 2013, 2014 Imixs Softwae Solutions GmbH
   All rights reserved.
   This program is made available under the terms of the
-  Eclipse Public License v1.0 which accompanies this distribution,
-  and is available at http://www.eclipse.org/legal/epl-v10.html
+  General Public License v2.0 which accompanies this distribution,
+  and is available at http://www.gnu.org/licenses/gpl.txt
   
   Contributors:
-  	Red Hat, Inc. - initial API and implementation
+  	ralph.soika@imixs.com - initial API and implementation
 -->
 <project
 	xmlns="http://maven.apache.org/POM/4.0.0"
@@ -29,9 +29,9 @@
 	<description>Update Site feature for Imixs-BPMN Modeler</description>
 
 	<properties>
-		<maven.antrun.plugin.version>1.3</maven.antrun.plugin.version>
-	  <update.site.name>Imixs BPMN Modeler</update.site.name>
-	  <update.site.description>Imixs BPMN Modeler Release build</update.site.description>
+	  <maven.antrun.plugin.version>1.3</maven.antrun.plugin.version>
+	  <update.site.name>Imixs-BPMN Modeler</update.site.name>
+	  <update.site.description>Imixs-BPMN Modeler Release build</update.site.description>
 	  <target.eclipse.version>4.5 (Mars)</target.eclipse.version>
 	  <siteTemplateFolder>siteTemplateFolder</siteTemplateFolder>
 	</properties>
