--- a/org.imixs.eclipse.bpmn2.plugin/plugin.xml
+++ b/org.imixs.eclipse.bpmn2.plugin/plugin.xml
@@ -55,15 +55,12 @@
              type="IntermediateCatchEvent">
           <property
            		description="Workflow Activity ID"
-                label="ID"
+                label="ID-Catch"
                 name="activityid"
                 type="EInt"
                 value="0">
           </property>            
       </customTask>
-      
-      
-      
         <customTask
              category="Imixs-Workflow"
              description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
@@ -75,7 +72,7 @@
              type="IntermediateThrowEvent">
           <property
            		description="Workflow Activity ID"
-                label="ID"
+                label="ID-Throw"
                 name="activityid"
                 type="EInt"
                 value="0">
@@ -85,7 +82,6 @@
       
       
       <!-- Activity Tabs 
-             
       -->
 	  <propertyTab
             class="org.imixs.bpmn.ui.event.WorkflowPropertySection"
