added sources from previous version
issue #56

--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,8 @@
 	<modules>
 		<module>org.imixs.eclipse.bpmn2.plugin</module>
 		<module>org.imixs.eclipse.bpmn2.feature</module>
+		<module>org.imixs.eclipse.report.plugin</module>
+		<module>org.imixs.eclipse.report.feature</module>
 		<module>org.imixs.eclipse.bpmn2.site</module>
 	</modules>
 
