--- a/org.imixs.eclipse.report.plugin/plugin.xml
+++ b/org.imixs.eclipse.report.plugin/plugin.xml
@@ -6,7 +6,7 @@
              point="org.eclipse.ui.editors">
           <editor
                 class="org.imixs.report.editors.ReportEditor"
-                default="false"
+                default="true"
                 extensions="imixs-report"
                 icon="icons/imixs-report.gif"
                 id="org.imixs.report.editors.reporteditor"
