--- a/org.imixs.eclipse.report.plugin/build.properties
+++ b/org.imixs.eclipse.report.plugin/build.properties
@@ -1,7 +1,11 @@
+#
+
+bin.includes = .,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties,\
+               lib/imixs-workflow-core-4.0.1.jar,\
+               icons/
+jars.compile.order = .
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               plugin.xml,\
-               lib/imixs-workflow-core-4.0.1.jar
-
