--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,9 @@
 
 	<!-- default to Eclipse neon release -->
 	<properties>
-		<eclipse-site>http://download.eclipse.org/releases/neon</eclipse-site>
-		<platform-version>[4.6,5.0)</platform-version>
-		<platform-version-name>neon</platform-version-name>
+		<eclipse-site>http://download.eclipse.org/releases/oxygen</eclipse-site>
+		<platform-version>[4.7,5.0)</platform-version>
+		<platform-version-name>oxygen</platform-version-name>
 		<tycho-version>0.21.0</tycho-version>
 		<tycho-extras-version>${tycho-version}</tycho-extras-version>
 	</properties>
